data/derived/sp14/progs/unify/prog1493.ml.out
Characters 168-169:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list * int list -> int -> bool
       but an expression was expected of type
         int list * int list -> int -> int list * int list
       Type bool is not compatible with type int list * int list 
